# if_changed

./: .clangd  AGENTS.md  CMakeLists.txt  Makefile  README.md
src/: cli.cpp  cli.hpp  io.cpp  io.hpp  lib.cpp  lib.hpp  main.cpp
tests/: lib_test.cpp
